--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+:root {
+    --onyx-color-backgrounds: #474448;
+    --wenge-color-backgrounds: #534b52;
+    --isabelline-color-texts: #f1f0ea;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -55,4 +61,70 @@ canvas {
 
 #restartBtn:hover {
     background-color: #45a049;
+}
+
+/* CSS for modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: var(--isabelline-color-texts);
+}
+
+.modal-content {
+    background-color: var(--onyx-color-backgrounds);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Resize images */
+.modal-content img {
+    width: 50px;
+    height: auto;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+/* Adjust text alignment */
+.modal-content p {
+    display: flex;
+    align-items: center; /* Align text vertically with images */
+}
+
+/* Add spacing between items */
+.modal-content p img {
+    margin-right: 10px; /* Add spacing between image and text */
+}
+
+.modal-content p span {
+    margin-right: 5px; /* Add spacing between text and comma */
+}
+
+/* Add spacing around strong tags */
+.modal-content p strong {
+    margin-right: 3px; /* Add spacing to the right of the strong tags */
+    margin-left: 3px; /* Add spacing to the left of the strong tags */
 }
